--- a/src/app.css
+++ b/src/app.css
@@ -19,13 +19,13 @@
 }
 
 
-header a {
+.nav-link {
     text-decoration: none;
     color: white;
     display: inline-block;
     margin-right: 80px;
     font-family: 'Times New Roman';
-    font-size: 20px;
+    font-size: 30px;
 }
 
 footer{
